//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table conversations {
  id String [pk]
  user_id String [not null]
  title String
  updated_at DateTime [default: `now()`]
  created_at DateTime [default: `now()`]
  is_archived Boolean
}

Table missing_knowledge_logs {
  id String [pk]
  thread_id String [not null]
  query String [not null]
  created_at DateTime [default: `now()`]
}

// Table store {
//   prefix String [not null]
//   key String [not null]
//   value Json [not null]
//   created_at DateTime [default: `now()`]
//   updated_at DateTime [default: `now()`]
//   expires_at DateTime
//   ttl_minutes Int

//   indexes {
//     (prefix, key) [pk]
//   }
// }


Table refresh_tokens {
  id String [pk]
  token String [unique, not null]
  user_id String [not null]
  is_revoked Boolean [not null, default: false]
  expires_at DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  revoked_at DateTime
  user_agent String
  ip_address String
}

Table resource_ownerships {
  id String [pk]
  resource_type String [not null]
  resource_id String [not null]
  owner_id String [not null]
  created_at DateTime [not null]
}

Table roles {
  id String [pk]
  name String [unique, not null]
  description String
  created_at DateTime [not null]
}


Table user_roles {
  user_id String [not null]
  role_id String [not null]

  indexes {
    (user_id, role_id) [pk]
  }
}

Table users {
  id String [pk]
  email String [unique, not null]
  hashed_password String
  is_active Boolean [not null]
  is_superuser Boolean [not null]
  created_at DateTime [not null]
  updated_at DateTime [not null]
  auth_provider String [not null, default: 'local']
  google_id String [unique]
  avatar_url String
  display_name String
}

Table dashboard_answer_ratings {
  id String [pk]
  user_id String [not null]
  run_id String [not null]
  rating String [not null]
  comment String
  thread_id String [not null]
  agent_id String
  created_at DateTime [not null]
  updated_at DateTime [not null]

  indexes {
    (user_id, run_id) [unique]
  }

  Note: 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.'
}

// 1. Cập nhật bảng post (Xóa cột tags)
Table dashboard_pinned_posts {
  id String [pk]
  display_order Int [unique, not null]
  title String [not null]
  ref_id String [unique, not null]
  category String [not null]
  pinned_date DateTime [not null]
  summary String [not null]
  source_url String [not null]
  document_type String [not null]
  // ĐÃ XÓA: tags Json 
  created_by String [not null]
  created_at DateTime [not null]
  updated_at DateTime [not null]
}

// 2. Tạo bảng Mapping trung gian
Table dashboard_pinned_post_tags {
  post_id String [not null]
  tag_id Int [not null]

  // Khóa chính phức hợp để đảm bảo 1 post không bị add trùng 1 tag
  indexes {
    (post_id, tag_id) [pk]
  }
}

// 3. Khai báo Khóa ngoại (Xóa post hoặc xóa tag thì mapping tự bay màu)
Ref: dashboard_pinned_post_tags.post_id > dashboard_pinned_posts.id [delete: Cascade]
Ref: dashboard_pinned_post_tags.tag_id > tags.id [delete: Cascade]

Table dashboard_topic_assignments {
  id String [pk]
  result_id String [not null]
  question String [not null]
  topic_id Int [not null]
  label String
  source String [not null]
  original_created_at DateTime
  created_at DateTime [not null]
}

Table dashboard_topic_pipeline_jobs {
  id String [pk]
  time_range String [not null]
  status String [not null, default: "pending"]
  stage String [not null, default: "pending"]
  progress Int [not null, default: 0]
  message String
  error_detail String
  created_at DateTime [not null]
  updated_at DateTime [not null]
  completed_at DateTime

  Note: 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.'
}

// 1. Cập nhật bảng kết quả
Table dashboard_topic_results {
  id String [pk]
  job_id String [not null]
  topic_type String [not null]
  n_topics Int [not null]
  n_documents Int [not null]
  // ĐÃ XÓA: topic_keywords Json
  topic_summary Json [not null] 
  topic_sentiment Json [not null, default: '{}']
  topic_marked Json [not null, default: '{}'] 
  created_at DateTime [not null]
}

// 2. Tạo bảng lưu trữ Keywords
Table dashboard_topic_keywords {
  id Int [pk, increment]
  result_id String [not null]
  keyword String [not null]
  // Có thể thêm cột weight/score nếu bot AI trả về trọng số của từ khóa đó
  // weight Float 

  indexes {
    (result_id, keyword) [unique] // Đảm bảo 1 result không có 2 keyword trùng nhau
  }
}

// 3. Khai báo Khóa ngoại
Ref: dashboard_topic_keywords.result_id > dashboard_topic_results.id [delete: Cascade]

// Table trace_spans {
//   id BigInt [pk, increment]
//   trace_id String [not null]
//   span_id String [not null]
//   parent_span_id String
//   service_name String [not null]
//   operation_name String [not null]
//   start_time DateTime [not null]
//   end_time DateTime
//   duration_ms Float
//   status_code Int
//   status_message String
//   attributes Json
//   events Json
//   resource_attributes Json
//   created_at DateTime [not null]
// }

Table chunks {
  id Int [pk, increment]
  document_id Int [not null]
  chunk_index Int [not null]
  content String [not null]
  embedding_id String [not null]
  chunk_metadata Json
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]

  indexes {
    (document_id, chunk_index) [unique]
  }
}

Table document_storages {
  id Int [pk, increment]
  name String [not null]
  description String
  config Json
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table document_tags {
  document_id Int [not null]
  tag_id Int [not null]

  indexes {
    (document_id, tag_id) [pk]
  }
}

Table documents {
  id Int [pk, increment]
  storage_id Int [not null]
  title String [not null]
  status String [not null]
  document_type String [not null]
  file_path String [not null]
  file_size Int [not null]
  checksum String [not null]
  processing_status String [not null]
  processing_error String
  processing_started_at DateTime
  processing_completed_at DateTime
  deletion_error String
  deletion_started_at DateTime
  deletion_completed_at DateTime
  meta_data Json
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table faq_question_variants {
  id Int [pk, increment]
  faq_id Int [not null]
  question String [not null]
  embedding_id String [not null]
}

Table faqs {
  id Int [pk, increment]
  source String [not null]
  document_id Int
  answer String [not null]
  meta_data Json
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]

  Note: 'This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.'
}

Table formal_documents {
  document_id Int [pk]
  lightrag_track_id String
  lightrag_doc_id String
  sync_status String [not null]
  sync_error String
  last_synced_at DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table tags {
  id Int [pk, increment]
  name String [not null]
  slug String [unique, not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table wayfinder_alias {
  id Int [pk, increment]
  node_id Int [not null]
  name String [not null]
}

Table wayfinder_building {
  id Int [pk, increment]
  name String [not null]
  description String
  real_image_url String
}

Table wayfinder_edge {
  id Int [pk, increment]
  start_node_id Int [not null]
  end_node_id Int [not null]
  type String [not null]
  weight Float [not null]
  bidirectional Boolean [not null]
  polyline Json
}

Table wayfinder_event {
  id Int [pk, increment]
  name String [not null]
  description String
  start_date Date [not null]
  end_date Date
  start_time Time
  end_time Time
  location_name String
  node_id Int
  organizer String
  category String
  is_active Boolean [not null]
  created_at DateTime
}

Table wayfinder_map {
  id Int [pk, increment]
  name String [not null]
  image_url String [not null]
  floor_level Int
  scale_ratio Float [not null]
  building_id Int
}

Table wayfinder_missing_location {
  id Int [pk, increment]
  name String [not null]
  building_name String
  floor_level Int
  description String
  requested_by String
  status String [not null]
  resolved_node_id Int
  resolved_at String
  resolved_by String
  admin_note String
  created_at DateTime
}

Table wayfinder_missing_route {
  id Int [pk, increment]
  start_node_id Int
  start_name String [not null]
  start_building String
  start_floor Int
  end_node_id Int
  end_name String [not null]
  end_building String
  end_floor Int
  reason String
  status String [not null]
  resolved_note String
  resolved_at String
  resolved_by String
  reported_by String
  created_at DateTime
}

Table wayfinder_node {
  id Int [pk, increment]
  name String [not null]
  x Float [not null]
  y Float [not null]
  description String
  real_image_url String
  type String [not null]
  map_id Int [not null]
}

Ref: refresh_tokens.user_id > users.id [delete: Cascade]

Ref: resource_ownerships.owner_id > users.id [delete: Cascade]

Ref: user_roles.role_id > roles.id [delete: Cascade]

Ref: user_roles.user_id > users.id [delete: Cascade]

Ref: dashboard_topic_assignments.result_id > dashboard_topic_results.id [delete: Cascade]

Ref: dashboard_topic_results.job_id > dashboard_topic_pipeline_jobs.id [delete: Cascade]

Ref: chunks.document_id > documents.id [delete: Cascade]

Ref: document_tags.document_id > documents.id [delete: Cascade]

Ref: document_tags.tag_id > tags.id [delete: Cascade]

Ref: documents.storage_id > document_storages.id [delete: No Action]

Ref: faq_question_variants.faq_id > faqs.id [delete: Cascade]

Ref: faqs.document_id > documents.id [delete: Cascade]

Ref: formal_documents.document_id - documents.id [delete: Cascade]

Ref: wayfinder_alias.node_id > wayfinder_node.id [delete: No Action]

Ref: wayfinder_edge.end_node_id > wayfinder_node.id [delete: No Action]

Ref: wayfinder_edge.start_node_id > wayfinder_node.id [delete: No Action]

Ref: wayfinder_event.node_id > wayfinder_node.id [delete: No Action]

Ref: wayfinder_map.building_id > wayfinder_building.id [delete: No Action]

Ref: wayfinder_node.map_id > wayfinder_map.id [delete: No Action]

Ref: missing_knowledge_logs.thread_id > conversations.id

Ref: dashboard_answer_ratings.thread_id > conversations.id

Ref: dashboard_answer_ratings.user_id > users.id

Ref: dashboard_pinned_posts.created_by > users.id

Ref: wayfinder_missing_location.resolved_node_id > wayfinder_node.id

Ref: conversations.user_id > users.id [delete: Cascade]

Ref: wayfinder_missing_route.start_node_id > wayfinder_node.id [delete: Set Null]

Ref: wayfinder_missing_route.end_node_id > wayfinder_node.id [delete: Set Null]